--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -27,7 +27,7 @@
         <form>
             <input id="post-id" type="hidden" name="postId" value="@Model.PostId" />
             <input id="user-id" type="hidden" name="userId" value="@ViewBag.CurrentUserId" />
-            <textarea id="comment-content" name="content" class="form-control form-control rounded-0 border-top-0 border-left-0 border-right-0" type="text" placeholder="let's disqus"></textarea>
+            <textarea id="comment-content" name="content" class="form-control form-control mb-3" type="text" placeholder="let's disqus"></textarea>
             <button id="comment-submit" type="submit" class="btn btn-primary btn-sm btn-block">Ok</button>
         </form>
         <hr />
