update js to scroll to last added comment

--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -38,7 +38,7 @@
                     {
                         <li id="comment-item" class="list-group-item">
                             <div class="row">
-                                <div class="col-12"><small>@comment.User.UserName</small></div>
+                                <div class="col-12"><small class="text-muted">@comment.User.UserName</small></div>
                                 <div class="col-12">@comment.Content</div>
                             </div>
                         </li>
