--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <div id="post-@item.PostId" class="card mb-4 box-shadow border-success border-right-0 border-bottom-0 border-left-0">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
-                        <small>@item.Category</small>
+                        <small>@item.Category.Name</small>
                         <small>@item.User.UserName <img src="@item.User.ImagePath" class="img-fluid post-user-pic rounded-circle" alt="Alternate Text" /></small>
                     </div>
                 </div>
@@ -39,7 +39,7 @@
             <div class="card mb-4 box-shadow border-warning border-right-0 border-bottom-0 border-left-0">
                 <div class="card-body">
                     <div class="d-flex justify-content-between align-items-center">
-                        <small>@item.Category</small>
+                        <small>@item.Category.Name</small>
                         <small>@item.User.UserName <img src="@item.User.ImagePath" class="img-fluid post-user-pic rounded-circle" alt="Alternate Text" /></small>
                     </div>
                 </div>
