--- a/RNews/Views/Publication/Create.cshtml
+++ b/RNews/Views/Publication/Create.cshtml
@@ -35,7 +35,7 @@
             <div class="form-group row">
                 <label for="staticCategory" class="col-sm-2 col-form-label font-weight-bold text-right">Category:</label>
                 <div class="col-sm-10">
-                    <select asp-for="Category" asp-items="@Html.GetEnumSelectList<RNews.DAL.Category>()" class="selectpicker form-control"></select>
+                    <select asp-for="CategoryId" asp-items="@Model.Categories" class="selectpicker form-control"></select>
                 </div>
             </div>
             <div class="form-group">
