--- a/RNews/Views/Shared/_AdminLayout.cshtml
+++ b/RNews/Views/Shared/_AdminLayout.cshtml
@@ -46,6 +46,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Posts">Posts</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Categories">Categories</a>
+                        </li>
                     </ul>
                 </div>
             </div>
