--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -7,11 +7,17 @@
     <div class="col-md-8 box-shadow">
         <h2 class="text-center font-weight-light">@Model.Title</h2>
         <hr />
+        
         <img src="@Model.ImagePath" alt="Alternate Text" class="img-fluid mx-auto d-block" />
         <div>
             @Html.Raw(Model.Content)
         </div>
-        <label for="input-1-ltr-star-xs" class="control-label">Rate This</label>
+        <div class="row justify-content-center">
+            @foreach (var tag in Model.Tags)
+            {
+                <div class="col-2 badge badge-light m-1 p-2">@tag.Tag.TagName</div>
+            }
+        </div>
         <input id="input-1-ltr-star-xs" name="input-1-ltr-star-xs" class="kv-ltr-theme-default-star rating-loading" value="1" dir="ltr" data-size="xs">
         <div class="media row">
             <div class="col-sm-2">
@@ -55,6 +61,5 @@
 @section Scripts{
     <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
     <script src="~/js/Comments.js"></script>
-    <script src="~/lib/bootstrap-star-rating/js/star-rating.min.js"></script>
-    <script src="~/js/ratepost.js"></script>
+
 }
