--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -15,7 +15,7 @@
         <div class="row justify-content-center">
             @foreach (var tag in Model.Tags)
             {
-                <div class="col-2 badge badge-light m-1 p-2">@tag.Tag.TagName</div>
+                <div class="col-2 badge badge-light m-1 p-2">#@tag.Tag.TagName</div>
             }
         </div>
         <input id="input-1-ltr-star-xs" name="input-1-ltr-star-xs" class="kv-ltr-theme-default-star rating-loading" value="1" dir="ltr" data-size="xs">
