--- a/RNews/Views/Publication/Create.cshtml
+++ b/RNews/Views/Publication/Create.cshtml
@@ -39,7 +39,7 @@
             <div>
                 <textarea name="Tags" placeholder="tags"></textarea>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-3">
                 <button type="submit" class="btn btn-primary btn-block">Publish</button>
             </div>
         </form>
