--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-    
+
 <div class="row">
     @foreach (var item in ViewBag.LastAdded)
     {
@@ -20,8 +20,12 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             @Html.ActionLink("View", "show", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
-                            @Html.ActionLink("Edit", "edit", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
-                            @Html.ActionLink("Delete", "delete", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                            @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                            {
+                                @Html.ActionLink("Edit", "edit", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                                @Html.ActionLink("Delete", "delete", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+
+                            }
 
                         </div>
                         <small class="text-muted">@item.Created.ToString("d")</small>
@@ -50,8 +54,12 @@
                     <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
                             @Html.ActionLink("View", "show", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
-                            @Html.ActionLink("Edit", "edit", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
-                            @Html.ActionLink("Delete", "delete", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                            @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                            {
+                                @Html.ActionLink("Edit", "edit", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+                                @Html.ActionLink("Delete", "delete", "publication", new { id = item.PostId }, new { @class = "btn btn-sm btn-outline-secondary" })
+
+                            }
                         </div>
                         <small class="text-muted">@item.Created.ToString("d")</small>
                     </div>
@@ -60,7 +68,12 @@
         </div>
     }
 </div>
+<div class="row">
+    <partial name="_TagCloud" />
+</div>
 <ul id="messages-list"></ul>
 @section Scripts {
     <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
+    <script src="~/lib/tagcloud.js"></script>
+    <script src="~/js/CloudTags.js"></script>
 }
