--- a/RNews/Views/Home/Index.cshtml
+++ b/RNews/Views/Home/Index.cshtml
@@ -68,7 +68,7 @@
         </div>
     }
 </div>
-<div class="row">
+<div class="row justify-content-center">
     <partial name="_TagCloud" />
 </div>
 <ul id="messages-list"></ul>
