--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -13,7 +13,7 @@
             @Html.Raw(Model.Content)
         </div>
         <div>
-            <input class="rating">
+            <input id="post-rating" name="ratingPost" class="rating">
         </div>
 
         <div class="row justify-content-center">
