--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -16,6 +16,7 @@
         <input id="user-id" type="hidden" name="userId" value="@ViewBag.CurrentUserId" />
         <div>
             <input id="post-rating" name="ratingPost" class="rating">
+            <p id="all-rating">Рейтинг: @Model.Rating</p>
         </div>
 
         <div class="row justify-content-center">
