--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -48,22 +48,22 @@
                 <ul id="messagesList" class="list-group list-group-flush">
                     @foreach (var comment in Model.PostComments)
                     {
-                    <li id="comment-item-@comment.CommentId" class="list-group-item">
-                        
-                        <div class="row">
-                            <div class="col-10"><small class="text-muted">@comment.User.UserName | @comment.Created.ToString("MM/dd/yyyy")</small></div>
-                            <div class="col-2">
+                        <li id="comment-item-@comment.CommentId" class="list-group-item">
+                            <input type="hidden" value="@comment.CommentId" />
+                            <div class="row">
+                                <div class="col-10"><small class="text-muted">@comment.User.UserName | @comment.Created.ToString("MM/dd/yyyy")</small></div>
+                                <div class="col-2">
+                                    <form id="comment-form-like">
+                                        <input id="comment-Id" type="hidden" name="commentId" value="@comment.CommentId" />
+                                        <input id="comment-is-like-value" type="hidden" name="isLikeValue" value="@comment.UserIsLike.ToString().ToLower()" />
+                                        <i id="comment-heart" class="far fa-heart comment-heart"></i>
+                                    </form>
+                                    <span id="comment-heart-@comment.CommentId-counter">12</span>
+                                </div>
+                                <div class="col-12">@comment.Content</div>
                                 
-                                <input id="user-id" type="hidden" name="userId" value="@ViewBag.CurrentUserId" />
-                                <input id="comment-id" type="hidden" name="commentId" value="@comment.CommentId" />
-                                <input id="comment-is-like-value" class="test" type="hidden" name="isLikeValue" value="false" />
-                                <i id="comment-heart" class="far fa-heart comment-heart"></i>
-                                <span id="comment-heart-@comment.CommentId-counter">12</span>
                             </div>
-                            <div class="col-12">@comment.Content</div>
-
-                        </div>
-                    </li>
+                        </li>
                     }
                 </ul>
             </div>
