--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -57,7 +57,7 @@
                                 <input id="user-id" type="hidden" name="userId" value="@ViewBag.CurrentUserId" />
                                 <input id="comment-id" type="hidden" name="commentId" value="@comment.CommentId" />
                                 <input id="comment-@comment.CommentId-is-like-value" type="hidden" name="isLikeValue" value="@comment.CommentLikes.FirstOrDefault(c=>c.UserId == ViewBag.CurrentUserId).IsLike.ToString().ToLower()" />
-                                <i id="comment-heart" class="far fa-heart comment-heart"></i>
+                                <i id="comment-heart" class="fa-heart comment-heart"></i>
                                 <span id="comment-heart-@comment.CommentId-counter">@comment.LikesCount</span>
                             </div>
                             <div class="col-12">@comment.Content</div>
