--- a/RNews/Views/Shared/_Layout.cshtml
+++ b/RNews/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -68,7 +69,10 @@
                     <ul class="navbar-nav flex-grow-1">
 
                         <li class="nav-item">
-                            <i id="theme" class="fas fa-sun"></i>
+                            <form asp-action="Toggle" asp-controller="Theme">
+                                <button type="submit" class="btn btn-link"><i id="theme" class="fas fa-sun"></i></button>
+                            </form>
+
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
