--- a/RNews/Views/Publication/Show.cshtml
+++ b/RNews/Views/Publication/Show.cshtml
@@ -34,6 +34,7 @@
             <div class="media-body col-sm-10">
                 <h5 class="mt-0">@Model.AuthorName</h5>
                 на "RNews" с  @Model.DateOfCreatedAuthor.ToString("Y")
+            <div class="small text-muted">@Model.AuthorDescription</div>
             </div>
         </div>
         <hr />
