--- a/RNews/Views/Publication/Create.cshtml
+++ b/RNews/Views/Publication/Create.cshtml
@@ -9,10 +9,12 @@
         <br />
         <hr />
         <form method="post" asp-action="Create" asp-controller="Publication" enctype="multipart/form-data">
+            <div class="validation" asp-validation-summary="ModelOnly"></div>
             <div class="form-group row">
                 <label for="staticTitle" class="col-sm-2 col-form-label font-weight-bold text-right">Title:</label>
                 <div class="col-sm-10">
                     <input asp-for="Title" type="text" class="form-control-plaintext" id="staticTitle" value="" placeholder="Your Title">
+
                 </div>
             </div>
             <div class="form-group row">
