--- a/RNews/Views/Shared/_Layout.cshtml
+++ b/RNews/Views/Shared/_Layout.cshtml
@@ -90,7 +90,16 @@
 
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "Java" })'>Java</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "HTML/CSS" })'>HTML/CSS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "C#/.NET" })'>C#/.NET</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "UI/UX" })'>UI/UX</a>
                         </li>
 
                     </ul>
