--- a/RNews/Views/Shared/_TagCloud.cshtml
+++ b/RNews/Views/Shared/_TagCloud.cshtml
@@ -1,8 +1,8 @@
 ﻿
-    <div id="tagcloud" class="text-center">
-        <h4 class="font-weight-light">Tags</h4>
-        @foreach (var tag in ViewBag.Tags)
-        {
-            <a href="#" rel="@tag.TagCount" class="text-decoration-none rounded p-2 mt-1 mb-1 d-inline-block"><span>@tag.TagName<sup>@tag.TagCount</sup></span></a>
-        }
-    </div>
+<div id="tagcloud" class="text-center">
+    <h4 class="font-weight-light">Tags</h4>
+    @foreach (var tag in ViewBag.Tags)
+    {
+        <a href='@Url.Action("GetCategoryPosts", "Category", new { name = "UI/UX" })' rel="@tag.TagCount" class="text-decoration-none rounded p-2 mt-1 mb-1 d-inline-block"><span>@tag.TagName<sup>@tag.TagCount</sup></span></a>
+    }
+</div>
