--- a/RNews/Views/Category/GetCategoryPosts.cshtml
+++ b/RNews/Views/Category/GetCategoryPosts.cshtml
@@ -7,7 +7,7 @@
     @foreach (var post in ViewBag.CategoryPosts)
     {
     <div class="col-12">
-        <div id="post-@post.PostId" class="card mb-4 box-shadow border-success border-right-0 border-bottom-0 border-left-0">
+        <div id="post-@post.PostId" class="card mb-4 box-shadow  border-right-0 border-bottom-0 border-left-0">
             <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
                     <small>@post.Category.Name</small>
