--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -18,7 +18,7 @@
             }
             </h4>
             <hr />
-            <form>
+           
                 @Html.HiddenFor(m => m.PropertyViewModelId)
                 <div class="form-group row">
                     <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
@@ -27,9 +27,9 @@
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label for="user-property-email" class="col-sm-2 col-form-label font-weight-bold">E-Mail</label>
+                    <div class="col-sm-2 font-weight-bold">E-Mail</div>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control-plaintext last" id="user-property-email" value="@Model.Email">
+                        <div>@Model.Email</div>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -41,7 +41,7 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary btn-block" id="user-property-btn">Ok</button>
                 </div>
-            </form>
+           
         </div>
         
     </div>
