--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -29,7 +29,7 @@
                 <div class="form-group row">
                     <div class="col-sm-2 font-weight-bold">E-Mail</div>
                     <div class="col-sm-10">
-                        <div>@Model.Email</div>
+                        <div id="user-property-email">@Model.Email</div>
                     </div>
                 </div>
                 <div class="form-group row">
