--- a/RNews/Views/Shared/_Layout.cshtml
+++ b/RNews/Views/Shared/_Layout.cshtml
@@ -50,10 +50,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
 
                     <ul class="navbar-nav">
-                        <li class="nav-item mr-3">
-                            <partial name="~/Views/Search/_Search.cshtml" />
-
-                        </li>
+                        
                         @if (!User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
@@ -65,14 +62,13 @@
                         }
                         else
                         {
-                            <li class="dropdown">
-                                <button class="dropdown-toggle nav-link nav-link btn btn-link text-dark" data-toggle="dropdown"> Account</button>
-                                <ul class="dropdown-menu">
-
-                                    <li><a class="nav-link text-dark" asp-controller="Properties" asp-action="Properties">Properties</a></li>
-                                    <li><a class="nav-link text-dark" asp-controller="Publication" asp-action="Create">Add Post</a></li>
-                                </ul>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Properties" asp-action="Properties">Properties</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Publication" asp-action="Create"><i class="fas fa-feather-alt fa-lg"></i></a>
+                            </li>
+
                             <li class="nav-item">
                                 <form class="form-inline" asp-controller="Auth" asp-action="LogOut" asp-route-returnUrl="@Url.Action("Index", "Home")">
                                     <button type="submit" class="nav-link btn btn-link text-dark">LogOut</button>
@@ -82,7 +78,7 @@
                     </ul>
 
                     <ul class="navbar-nav flex-grow-1">
-                        
+
                         <li class="nav-item">
                             <form asp-action="Toggle" asp-controller="Theme">
                                 <button type="submit" class="btn btn-link"><i id="theme" class="fas fa-sun"></i></button>
@@ -101,7 +97,6 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "UI/UX" })'>UI/UX</a>
                         </li>
-
                     </ul>
                 </div>
             </div>
@@ -118,19 +113,39 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            <div class="col-md-6">
+            <div class="row">
+                <div class="col-6">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "Java" })'>Java</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "HTML/CSS" })'>HTML/CSS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "C#/.NET" })'>C#/.NET</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "UI/UX" })'>UI/UX</a>
+                        </li>
+                    </ul>
 
-
+                </div>
+                <div class="col-3">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <partial name="~/Views/Search/_Search.cshtml" />
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-3">
+                    @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                    {
+                        <a asp-action="Index" asp-controller="Admin">Control Panel</a>
+                    }
+                </div>
             </div>
-            <div class="col-md-3">
-
-            </div>
-            <div class="col-md-3">
-                @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
-                {
-                    <a asp-action="Index" asp-controller="Admin">Control Panel</a>
-                }
-            </div>
+           
             &copy; 2019 - RNews - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
 
