--- a/RNews/Views/Shared/_Layout.cshtml
+++ b/RNews/Views/Shared/_Layout.cshtml
@@ -117,31 +117,21 @@
                 <div class="col-6">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "Java" })'>Java</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "HTML/CSS" })'>HTML/CSS</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "C#/.NET" })'>C#/.NET</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href='@Url.Action("GetCategoryPosts", "Category", new { name = "UI/UX" })'>UI/UX</a>
-                        </li>
-                    </ul>
-
-                </div>
-                <div class="col-3">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
                             <partial name="~/Views/Search/_Search.cshtml" />
                         </li>
                     </ul>
                 </div>
                 <div class="col-3">
+                   
+                </div>
+                <div class="col-3">
                     @if (User.Identity.IsAuthenticated && User.IsInRole("admin"))
                     {
-                        <a asp-action="Index" asp-controller="Admin">Control Panel</a>
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a asp-action="Index" asp-controller="Admin" class="nav-link text-dark">Control Panel</a>
+                            </li>
+                        </ul>
                     }
                 </div>
             </div>
