update main page

--- a/RNews/Views/Search/_Search.cshtml
+++ b/RNews/Views/Search/_Search.cshtml
@@ -1,3 +1,3 @@
 ﻿<form asp-controller="Search" asp-action="Index" class="form-inline">
-    <input name="searchString" class="form-control form-control rounded-0 border-top-0 border-left-0 border-right-0" type="text" placeholder="Search" aria-label="Search">
+    <input name="searchString" class="form-control form-control rounded-0 border-top-0 border-left-0 border-right-0 w-100 m-2" type="text" placeholder="Search" aria-label="Search">
 </form>
