--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -1,35 +1,39 @@
 ﻿@model RNews.Models.ViewModels.PropertyViewModel
-
 @{
     ViewData["Title"] = "Properties";
 }
-   
 <div class="row justify-content-center ">
     <div class="col-md-8 row ">
         <div class="col-md-4 box-shadow">
             <img src="@Model.ImagePath" alt="User Avatar" class="img-fluid" id="user-avatar" />
-            
             <partial name="UploadAvatar" />
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8" id="properties">
             <h4 class="text-center font-weight-light">@foreach (var role in Model.Roles)
             {
                 <strong> @role</strong> 
             }
             </h4>
             <hr />
-           
                 @Html.HiddenFor(m => m.PropertyViewModelId)
-                <div class="form-group row">
-                    <label for="user-property-name" class="col-sm-2 col-form-label font-weight-bold">Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name">
+                <div class="form-group row" id="name">
+                    <div class="col-sm-2 font-weight-bold">Name</div>
+                    <div class="col-sm-6 property-change">
+                        <p id="user-property-name" class="mb-2">@Model.Name</p>
+                    </div>
+                    <div class="col-sm-4" id="name-buttons">
+                        <button id="name-edit-button" class="btn btn-info btn-sm"><i class="fas fa-pencil-alt"></i></button>
+                        <button id="name-submit-button" class="btn btn-success btn-sm"><i class="fas fa-check"></i></button>
                     </div>
                 </div>
-                <div class="form-group row">
+                <div class="form-group row" id="mail">
                     <div class="col-sm-2 font-weight-bold">E-Mail</div>
-                    <div class="col-sm-10">
-                        <div id="user-property-email">@Model.Email</div>
+                    <div class="col-sm-6 property-change">
+                        <p id="user-property-email" class="mb-2">@Model.Email</p>
+                    </div>
+                    <div class="col-sm-4" id="email-buttons">
+                        <button id="edit-button" class="btn btn-info btn-sm"><i class="fas fa-pencil-alt"></i></button>
+                        <button id="submit-button" class="btn btn-success btn-sm"><i class="fas fa-check"></i></button>
                     </div>
                 </div>
                 <div class="form-group row">
