--- a/RNews/Views/Shared/_Layout.cshtml
+++ b/RNews/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
         <link href="~/simplemde/simplemde.min.css" rel="stylesheet" />
         <link href="~/lib/tagify/tagify.css" rel="stylesheet" />
         <link href="~/lib/star-rating-svg-master/src/css/star-rating-svg.css" rel="stylesheet" />
+        <link href="~/lib/alertifyjs/css/alertify.css" rel="stylesheet" />
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
