--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -23,11 +23,11 @@
                     <p id="user-property-name" class="mb-2">@Model.Name</p>
                 </div>
                 <div class="col-sm-4" id="name-buttons">
-                    <button id="name-edit-button" class="btn btn-info btn-sm"><i class="fas fa-pencil-alt"></i></button>
-                    <button id="name-submit-button" class="btn btn-success btn-sm"><i class="fas fa-check"></i></button>
+                    <button id="name-edit-button" class="btn btn-info btn-sm" tabindex="0"><i class="fas fa-pencil-alt"></i></button>
+                    <button id="name-submit-button" class="btn btn-success btn-sm" tabindex="0"><i class="fas fa-check"></i></button>
                 </div>
             </div>
-            <div class="form-row" id="mail">
+            <div class="form-group row" id="mail">
                 <div class="col-sm-2 font-weight-bold">E-Mail</div>
                 <div class="col-sm-6 property-change">
                     <p id="user-property-email" class="mb-2">@Model.Email</p>
@@ -40,7 +40,7 @@
             <div class="form-group row">
                 <label for="user-property-description" class="col-sm-12 col-form-label font-weight-bold">Description:</label>
                 <div class="col-sm-12">
-                    <input type="text" class="form-control-plaintext last" id="user-property-description" value="@Model.Description">
+                    <input type="text" class="form-control-plaintext" id="user-property-description" value="@Model.Description">
                 </div>
             </div>
 
