--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -37,8 +37,12 @@
                     <button id="submit-button" class="btn btn-success btn-sm"><i class="fas fa-check"></i></button>
                 </div>
             </div>
-            <div class="form-group row">
-                <label for="user-property-description" class="col-sm-12 col-form-label font-weight-bold">Description:</label>
+            <div class="form-group row" id="description">
+                <label for="user-property-description" class="col-sm-6 col-form-label font-weight-bold">Description:</label>
+                <div class="col-sm-6" id="description-buttons">
+                    <button id="description-edit-button" class="btn btn-info btn-sm" tabindex="0"><i class="fas fa-pencil-alt"></i></button>
+                    <button id="description-submit-button" class="btn btn-success btn-sm" tabindex="0"><i class="fas fa-check"></i></button>
+                </div>
                 <div class="col-sm-12">
                     <input type="text" class="form-control-plaintext" id="user-property-description" value="@Model.Description">
                 </div>
