--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -44,7 +44,7 @@
                     <button id="description-submit-button" class="btn btn-success btn-sm" tabindex="0"><i class="fas fa-check"></i></button>
                 </div>
                 <div class="col-sm-12">
-                    <input type="text" class="form-control-plaintext" id="user-property-description" value="@Model.Description">
+                    <input type="text" class="form-control-plaintext" id="user-property-description" value="@Model.Description" required>
                 </div>
             </div>
 
