--- a/RNews/Views/Properties/Properties.cshtml
+++ b/RNews/Views/Properties/Properties.cshtml
@@ -17,26 +17,22 @@
             </h4>
             <hr />
             @Html.HiddenFor(m => m.PropertyViewModelId)
-            <div class="form-group row" id="name">
-                <div class="col-sm-2 font-weight-bold">Name</div>
-                <div class="col-sm-6 property-change">
-                    <p id="user-property-name" class="mb-2">@Model.Name</p>
-                </div>
-                <div class="col-sm-4" id="name-buttons">
-                    <button id="name-edit-button" class="btn btn-info btn-sm" tabindex="0"><i class="fas fa-pencil-alt"></i></button>
-                    <button id="name-submit-button" class="btn btn-success btn-sm" tabindex="0"><i class="fas fa-check"></i></button>
-                </div>
+        <div class="form-group row" id="name">
+            <label for="user-property-name" class="col-sm-6 col-form-label font-weight-bold">Name:</label>
+            <div class="col-sm-6" id="name-buttons">
+                <button id="name-edit-button" class="btn btn-info btn-sm" tabindex="0"><i class="fas fa-pencil-alt"></i></button>
+                <button id="name-submit-button" class="btn btn-success btn-sm" tabindex="0"><i class="fas fa-check"></i></button>
             </div>
-            <div class="form-group row" id="mail">
-                <div class="col-sm-2 font-weight-bold">E-Mail</div>
-                <div class="col-sm-6 property-change">
-                    <p id="user-property-email" class="mb-2">@Model.Email</p>
-                </div>
-                <div class="col-sm-4" id="email-buttons">
-                    <button id="edit-button" class="btn btn-info btn-sm"><i class="fas fa-pencil-alt"></i></button>
-                    <button id="submit-button" class="btn btn-success btn-sm"><i class="fas fa-check"></i></button>
-                </div>
+            <div class="col-sm-12">
+                <input type="text" class="form-control-plaintext" id="user-property-name" value="@Model.Name" required>
             </div>
+        </div>
+        <div class="form-group row" id="email">
+            <label for="user-property-email" class="col-sm-12 col-form-label font-weight-bold">Email:</label>
+            <div class="col-sm-12">
+                <input type="text" class="form-control-plaintext" id="user-property-email" value="@Model.Email" readonly>
+            </div>
+        </div>
             <div class="form-group row" id="description">
                 <label for="user-property-description" class="col-sm-6 col-form-label font-weight-bold">Description:</label>
                 <div class="col-sm-6" id="description-buttons">
